--- a/app/index-demo.html
+++ b/app/index-demo.html
@@ -50,12 +50,13 @@
             <li><a href="https://www.python.org/" rel="nofollow">Python</a></li>
             <li><a href="https://flask.palletsprojects.com/" rel="nofollow">Flask</a></li>
             <li><a href="https://getbootstrap.com/" rel="nofollow">Bootstrap</a></li>
+            <li><a href="https://www.postgresql.org/" rel="nofollow">PostgreSQL</a></li>
           </ul>
         </div>
       </div>
     </main>
     <footer class="pt-5 my-5 text-muted border-top">
-      <a href="https://github.com/drewg3r">drewg3r</a> | <a href="https://github.com/drewg3r/dl-schedule">repo</a> &middot; &copy; 2022
+      <a href="https://github.com/drewg3r">drewg3r</a> | <a href="https://github.com/drewg3r/dl-schedule">repo</a> &middot; &copy; 2021
     </footer>
   </div>
 {% endblock %}
